--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,7 @@ add_library(imgui
         extlibs/imgui/examples/imgui_impl_sdl.cpp)
 
 include_directories(${NGLIB_HEADERS_DIR} ${SDL2_INCLUDE_DIRS})
-add_executable(${PROJECT_NAME} main.cpp extlibs/imgui/examples/imgui_impl_opengl3.cpp)
+add_executable(${PROJECT_NAME} main.cpp
+        Application.cpp ColorCyclingApplication.cpp TimeSpan.cpp Window.cpp
+        extlibs/imgui/examples/imgui_impl_opengl3.cpp)
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} GLEW::GLEW imgui)
