Add a main menu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,6 @@ add_library(imgui
 
 include_directories(${NGLIB_HEADERS_DIR} ${SDL2_INCLUDE_DIRS})
 add_executable(${PROJECT_NAME} main.cpp
-        Application.cpp ColorCyclingApplication.cpp TimeSpan.cpp Window.cpp
+        Application.cpp ColorCyclingApplication.cpp TimeSpan.cpp Util.cpp Window.cpp
         extlibs/imgui/examples/imgui_impl_opengl3.cpp)
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} GLEW::GLEW imgui)
