Create a src folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ add_library(ImGuiFileDialog
         extlibs/ImGuiFileDialog/ImGuiFileDialog.cpp)
 
 include_directories(${NGLIB_HEADERS_DIR} ${SDL2_INCLUDE_DIRS})
-add_executable(${PROJECT_NAME} main.cpp
-        Application.cpp ColorCyclingApplication.cpp TimeSpan.cpp Util.cpp Window.cpp
+add_executable(${PROJECT_NAME} src/main.cpp
+        src/Application.cpp src/ColorCyclingApplication.cpp src/TimeSpan.cpp src/Util.cpp src/Window.cpp
         extlibs/imgui/examples/imgui_impl_opengl3.cpp)
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} GLEW::GLEW imgui ImGuiFileDialog)
